==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Changelog
=========
 
 - Added possible data type conversion to a timestamp array.
   e.g. ``cast(['2017-01-01','2017-12-31'] as array(timestamp))``

 - Fixed bug introduced in 1.1.0 which caused all partitioned tables to
   become unusable.

 - Fixed an issued that caused conditions like ``not x = any( )`` to not 
   find empty lists when used in WHERE clauses.

 - Improved error handling when using LIMIT/OFFSET that exceed Integer range

 - Fixed a regression introduced in 1.1.0 that caused statements like ``COPY t
   TO '/invalid/directory/'`` to get stuck instead of resulting in an error.